fix spacing on login button

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -29,7 +29,7 @@ html, body, #elm-app, .content-frame {
         background: @base00;
         text-align: right;
 
-        .user-id {
+        .user-id, .login-button {
           padding: 0 10px;
         }
 
